# hexcaster

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.claude/skills/envelop_detection/: SKILL.md
cmake/: dependencies.cmake
dsp/: CMakeLists.txt
dsp/components/include/hexcaster/: envelope.h  envelope_detectors.h  eq.h  gain_stage.h  ir_convolver.h  nam_stage.h  noise_gate.h  processor_stage.h  reverb.h
dsp/components/src/: eq.cpp  gain_stage.cpp  nam_stage.cpp  noise_gate.cpp
dsp/pipeline/include/hexcaster/: bloom_controller.h  pipeline.h
dsp/pipeline/src/: bloom_controller.cpp  pipeline.cpp
hosts/clap/: CMakeLists.txt  Info.plist  hexcaster_clap.cpp
hosts/lv2/: CMakeLists.txt  hexcaster.ttl  hexcaster_lv2.cpp  manifest.ttl
hosts/standalone/: CMakeLists.txt  alsa_audio_engine.cpp  alsa_audio_engine.h  audio_engine.h  level_meter.h  main.cpp  midi_input.cpp  midi_input.h
hosts/standalone/tui/: meter_data.h  tui.cpp  tui.h
hosts/standalone/tui/screens/: bloom_screen.cpp  bloom_screen.h  eq_screen.cpp  eq_screen.h  main_screen.cpp  main_screen.h  meter_widget.h
params/: CMakeLists.txt
params/include/hexcaster/: midi_map.h  param_id.h  param_registry.h  param_smoother.h
params/src/: midi_map.cpp  param_registry.cpp  param_smoother.cpp
tests/: CMakeLists.txt  test_passthrough.cpp
